--- a/FunctionalitySamples/FunctionalitySamples.csproj
+++ b/FunctionalitySamples/FunctionalitySamples.csproj
@@ -45,6 +45,7 @@
     <Compile Include="MainLoopChangeBkColor.cs" />
     <Compile Include="KernelChangeBkColor_MultiType_File1.cs" />
     <Compile Include="KernelChangeBkColor_MultiType_File2.cs" />
+    <Compile Include="NByteCompilation.cs" />
     <Compile Include="Nothing.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="InitializerChangeBkColor.cs" />
@@ -53,6 +54,10 @@
     <ProjectReference Include="..\Framework\Framework.csproj">
       <Project>{cf009382-9c32-4ac3-ae1e-69be5162d502}</Project>
       <Name>Framework</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\VCSFramework\VCSFramework.csproj">
+      <Project>{b5f8c62f-ceb0-47e4-858e-b2ca7b85c0d6}</Project>
+      <Name>VCSFramework</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
