--- a/VCSCompiler/VCSCompiler.csproj
+++ b/VCSCompiler/VCSCompiler.csproj
@@ -14,4 +14,8 @@
     <PackageReference Include="System.Reactive" Version="3.1.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\VCSFramework\VCSFramework.csproj" />
+  </ItemGroup>
+
 </Project>
