--- a/FunctionalitySamples/FunctionalitySamples.csproj
+++ b/FunctionalitySamples/FunctionalitySamples.csproj
@@ -40,6 +40,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Empty.cs" />
+    <Compile Include="EvolvingSample.cs" />
     <Compile Include="KernelChangeBkColor.cs" />
     <Compile Include="KernelChangeBkColor_Methods.cs" />
     <Compile Include="MainLoopChangeBkColor.cs" />
