--- a/VCSCompiler/VCSCompiler.csproj
+++ b/VCSCompiler/VCSCompiler.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="2.1.0" />
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="2.1.0" />
     <PackageReference Include="Microsoft.CodeAnalysis.Workspaces.Common" Version="2.1.0" />
+    <PackageReference Include="Microsoft.CSharp" Version="4.3.0" />
     <PackageReference Include="Mono.Cecil" Version="0.10.0-beta5" />
     <PackageReference Include="System.Reactive" Version="3.1.1" />
   </ItemGroup>
