--- a/VCSFramework/VCSFramework.csproj
+++ b/VCSFramework/VCSFramework.csproj
@@ -1,7 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard1.0</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
+    <OutputType>library</OutputType>
   </PropertyGroup>
 
 </Project>
