--- a/VCSFramework/VCSFramework.csproj
+++ b/VCSFramework/VCSFramework.csproj
@@ -5,4 +5,8 @@
     <OutputType>library</OutputType>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Mono.Cecil" Version="0.11.2" />
+  </ItemGroup>
+
 </Project>
