--- a/VCSCompiler/VCSCompiler.csproj
+++ b/VCSCompiler/VCSCompiler.csproj
@@ -16,15 +16,17 @@
   <ItemGroup>
     <ProjectReference Include="..\6502DotNet\6502DotNet.csproj" />
     <ProjectReference Include="..\VCSFramework\VCSFramework.csproj" />
+    <ProjectReference Include="..\VILMacroGenerator\VILMacroGenerator.csproj"
+                      OutputItemType="Analyzer" ReferenceOutputAssembly="false"/>
   </ItemGroup>
 
   <ItemGroup>
     <None Update="vcs.h">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Update="vil.h">
+    <AdditionalFiles Include="vil.h">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
+    </AdditionalFiles>
   </ItemGroup>
 
 </Project>
