--- a/6502DotNet/6502DotNet.csproj
+++ b/6502DotNet/6502DotNet.csproj
@@ -2,8 +2,43 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
-    <RootNamespace>_6502DotNet</RootNamespace>
     <OutputType>library</OutputType>
+    <PackageId>6502.Net</PackageId>
+    <Version>2.2.1</Version>
+    <Authors>informedcitizenry</Authors>
+    <Company>informedcitizenry</Company>
+    <Product>6502.Net</Product>
+    <Description>6502.Net, A simple .Net 6502 and Z80 Cross Assembler</Description>
+    <Copyright>(C) Copyright 2017-2020 informedcitizenry</Copyright>
+    <ReleaseVersion>2.1.6.1</ReleaseVersion>
+    <AssemblyName>6502.Net</AssemblyName>
+    <AssemblyVersion>2.2.1.0</AssemblyVersion>
+    <FileVersion>2.2.1.0</FileVersion>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Remove="Properties\launchSettings.json" />
+    <None Remove="wiki.txt" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="CommandLineParser" Version="2.8.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="src\Utility\ConfigConstants.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>ConfigConstants.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="src\Utility\ConfigConstants.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>ConfigConstants.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+  </ItemGroup>
 
 </Project>
