--- a/VCSFramework/VCSFramework.csproj
+++ b/VCSFramework/VCSFramework.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
     <OutputType>library</OutputType>
+    <LangVersion>preview</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
