--- a/6502DotNet/Core6502DotNet.csproj
+++ b/6502DotNet/Core6502DotNet.csproj
@@ -1,23 +1,25 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
     <OutputType>library</OutputType>
+    <TargetFramework>net5.0</TargetFramework>
     <PackageId>6502.Net</PackageId>
-    <Version>2.2.1</Version>
+    <Version>2.3.2</Version>
     <Authors>informedcitizenry</Authors>
     <Company>informedcitizenry</Company>
     <Product>6502.Net</Product>
-    <Description>6502.Net, A simple .Net 6502 and Z80 Cross Assembler</Description>
+    <Description>6502.Net, A .Net Cross Assembler for Several 8-Bit Microprocessors.</Description>
     <Copyright>(C) Copyright 2017-2020 informedcitizenry</Copyright>
     <ReleaseVersion>2.1.6.1</ReleaseVersion>
     <AssemblyName>6502.Net</AssemblyName>
-    <AssemblyVersion>2.2.1.0</AssemblyVersion>
-    <FileVersion>2.2.1.0</FileVersion>
+    <AssemblyVersion>2.3.2.0</AssemblyVersion>
+    <FileVersion>2.3.2.0</FileVersion>
+    <SignAssembly>false</SignAssembly>
   </PropertyGroup>
 
   <ItemGroup>
     <None Remove="Properties\launchSettings.json" />
+    <None Remove="Releases.txt" />
     <None Remove="wiki.txt" />
   </ItemGroup>
 
